2008-04-18  Neil Williams  <linux@codehelp.co.uk>

	* backend/dwi/dwi-backend.c (dwiend_load_foundation),
	(dwiend_run_query), (dwiend_compile_query), (dwiend_session_begin):
	* backend/dwi/qofmap.c (qof_map_new), (qof_map_destroy),
	(qof_map_add_field), (qof_map_add_match),
	(qof_map_add_version_cmp), (qof_map_copy_multiple_from_db),
	(qof_map_copy_from_db), (qof_map_copy_to_db),
	(qof_map_write_to_db):
	* backend/dwi/qofmap.h: Add doxygen support.
	Standardise on GLib data types like the rest of QOF.
	* doc/doxygen.cfg.in: Add DWI to the Doxygen output.

2008-04-17  Neil Williams  <linux@codehelp.co.uk>

	* README.cvs, README.svn: Add content for debian builds.
	Renamed to reflect change to SVN.
	* configure.ac, backend/Makefile.am: Implement conditional
	support for DWI.
	* backend/dwi/Makefile.am: Correct LIBS handling and remove
	version info to create a normal QOF backend module.
	* backend/dwi/qofmap.c (qof_map_write_to_db), backend/dwi/qofmap.h,
	* backend/dwi/dwi-backend.c (dwiend_compile_query), (dwiend_new):
	Fix typo and bring debugging support into line with QOF >= 0.7

2008-03-25  Neil Williams  <linux@codehelp.co.uk>

 * website/index.html, website/start.html, Makefile.am :
 Add a guide to starting with QOF.

2008-03-20  Neil Williams  <linux@codehelp.co.uk>

	* backend/file/qsf-backend.c: Add include for
	the now private kvputil-p.h header.
	* backend/sqlite/qof-sqlite.c (build_kvp_table),
	(qsql_class_foreach): Switch to qof_sql_object_create_table
	because no entity exists when the tables need to be created.
	Allow more room for indices by using a gulong instead of glong.
	* qof/qof.h: Remove the private header kvputil-p.h
	(public functions already moved to kvputil.h)
	* qof/qofsql.c (string_param_to_sql),
	(qof_sql_entity_insert), (qof_sql_entity_update_kvp): Doxygen
	tweaks.
	qof/qofsql.c (qof_sql_entity_create_table) : Add assertion
	if a NULL entity is passed. Prevent double free by only
	freeing data.str if KVP slots exist.
