@@ -1,3 +1,8 @@
+2008-05-04  Neil Williams  <linux@codehelp.co.uk>
+
+ * qofutil.c (qof_util_param_to_string): Ensure even an 
+   empty KvpFrame returns a newly allocated string 
+
 2008-04-18  Neil Williams  <linux@codehelp.co.uk>
 
 	* backend/dwi/dwi-backend.c (dwiend_load_foundation),
